correct overflow

--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,13 @@ html, body {
     height: 100%;
     width: 100%;
     margin: 0;
-    /* overflow-y: hidden; */
+    overflow-y: hidden;
 }
 
 body {
     padding: 10px;
     background: #000;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 h2 {
